tests/machine/x/python/left_join_multi.error
run: exit status 1
--- Left Join Multi ---
Traceback (most recent call last):
  File "/workspace/mochi/tests/machine/x/python/left_join_multi.py", line 110, in <module>
    print(r["orderId"], r["name"], r["item"])
          ~^^^^^^^^^^^
TypeError: 'Auto1' object is not subscriptable

